--- a/complete-intro-to-react-v9/padre-ginos/package.json
+++ b/complete-intro-to-react-v9/padre-ginos/package.json
@@ -28,7 +28,8 @@
     "globals": "^15.9.0",
     "happy-dom": "^15.7.4",
     "vite": "^5.4.2",
-    "vitest": "^2.1.3"
+    "vitest": "^2.1.3",
+    "vitest-fetch-mock": "^0.3.0"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.13",
