--- a/complete-intro-to-react-v9/padre-ginos/package.json
+++ b/complete-intro-to-react-v9/padre-ginos/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "prettier": "prettier --write \"src/**/*.{js,json,css,html}\"",
     "lint": "eslint",
-    "test": "vitest"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,7 @@
     "@tanstack/router-plugin": "^1.65.0",
     "@testing-library/react": "^16.0.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^2.1.3",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.1",
@@ -34,6 +37,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.59.13",
     "@tanstack/react-router": "^1.65.0",
+    "@vitest/ui": "^2.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
