--- a/complete-intro-to-react-v9/padre-ginos/package.json
+++ b/complete-intro-to-react-v9/padre-ginos/package.json
@@ -27,6 +27,7 @@
     "@vitest/browser": "^3.2.3",
     "@vitest/coverage-istanbul": "^3.2.3",
     "@vitest/coverage-v8": "^3.2.3",
+    "babel-plugin-react-compiler": "^19.0.0-beta-af1b7da-20250417",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.1",
